Deleted all uiculture declarations from pages and moved it to the web.config. Spanish FAQ now located in the App_Data/faq_files directory. Latest Spanish translation updated.  CSS modified to account for longer international words.

--- a/web.config
+++ b/web.config
@@ -30,6 +30,7 @@
 		          providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
+        <globalization uiCulture="auto" />
 		<!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
