Starting to add in API for email interaction in the SlickTicket.DomainModel project

--- a/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
+++ b/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
@@ -61,7 +61,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Tickets.cs" />
+    <Compile Include="Units.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
