--- a/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
+++ b/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Comments.cs" />
     <Compile Include="Errors.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Mailboxes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
