--- a/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
+++ b/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.3.9.1, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -50,11 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attachments.cs" />
-    <Compile Include="Comments.cs" />
-    <Compile Include="Errors.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Mailboxes.cs" />
+    <Compile Include="Objects\Attachments.cs" />
+    <Compile Include="Objects\Comments.cs" />
+    <Compile Include="Objects\Errors.cs" />
+    <Compile Include="Objects\Mailboxes.cs" />
+    <Compile Include="Objects\Tickets.cs" />
+    <Compile Include="Objects\Units.cs" />
+    <Compile Include="Objects\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -66,9 +70,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>st.dbml</DependentUpon>
     </Compile>
-    <Compile Include="Tickets.cs" />
-    <Compile Include="Units.cs" />
-    <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
@@ -89,6 +90,9 @@
     <None Include="st.dbml.layout">
       <DependentUpon>st.dbml</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\HtmlAgilityPack.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
