--- a/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
+++ b/SlickTicket.DomainModel/SlickTicket.DomainModel.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="HtmlFilter.cs" />
     <Compile Include="Objects\Attachments.cs" />
     <Compile Include="Objects\Comments.cs" />
     <Compile Include="Objects\Errors.cs" />
