--- a/SlickTicket.EmailParser/SlickTicket.EmailParser.csproj
+++ b/SlickTicket.EmailParser/SlickTicket.EmailParser.csproj
@@ -27,6 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <ApplicationIcon>SlickTicket.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -109,6 +110,7 @@
   <ItemGroup>
     <Content Include="MIMEParser.dll" />
     <Content Include="OpenPOP.dll" />
+    <Content Include="SlickTicket.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
