--- a/SlickTicket.Screenshooter/app.config
+++ b/SlickTicket.Screenshooter/app.config
@@ -14,7 +14,7 @@
         </SlickTicket.Screenshooter.Properties.Settings>
         <Screenshooter.Properties.Settings>
             <setting name="Screenshooter_wsGetImage_Screenshooter" serializeAs="String">
-                <value>http://tagvw8sw001.thebeecompany.com/Screenshooter.asmx</value>
+                <value>http://myServer/Screenshooter.asmx</value>
             </setting>
         </Screenshooter.Properties.Settings>
     </applicationSettings>
